istio/istio-deepdive/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  rules:
  - host: "*.example.com"
    http:
      paths:
      - pathType: Exact
        path: "/v1"
        backend:
          service:
            name: dest-svc-v1
            port:
              name: "http-v1"
      - pathType: Exact
        path: "/v2"
        backend:
          service:
            name: dest-svc-v2
            port:
              name: "http-v2"
      # Catch-all rule for undefined paths (for 404)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dest-svc-error
            port:
              name: "http-error"
